--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
