--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.5.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
